--- a/package.json
+++ b/package.json
@@ -16,18 +16,39 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "axios": "^0.18.0",
+    "jquery": "^3.2.1",
+    "lodash": "^4.17.11",
+    "vue": "2.5.17",
+    "vue-property-decorator": "7.0.0",
+    "vue-router": "3.0.1",
+    "vue2-filters": "^0.3.0",
+    "vuelidate": "^0.7.4",
+    "vuex": "3.0.1",
+    "vuex-router-sync": "5.0.0",
+    "vuex-typex": "^3.0.1",
+    "webpack-bundle-analyzer": "^3.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.0.1",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-jsx": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
     "@types/jquery": "^3.3.6",
     "@types/lodash": "^4.14.116",
     "@types/node": "^10.9.4",
     "@types/shortid": "0.0.29",
     "autoprefixer": "^9.1.5",
-    "axios": "^0.18.0",
     "babel-loader": "^8.0.2",
-    "babel-plugin-transform-decorators": "^6.24.1",
-    "chance": "^1.0.13",
-    "compression-webpack-plugin": "^1.1.12",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "chance": "^1.0.16",
+    "clean-webpack-plugin": "^0.1.19",
+    "compression-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
     "css-loader": "1.0.0",
@@ -37,7 +58,7 @@
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-vue": "^4.7.1",
     "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "favicons-webpack-plugin": "0.0.9",
     "file-loader": "2.0.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -45,11 +66,12 @@
     "glob": "^7.1.3",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "4.3.1",
-    "jquery": "^3.2.1",
-    "lodash": "^4.17.4",
-    "morgan": "^1.9.0",
+    "mini-css-extract-plugin": "^0.4.2",
+    "morgan": "^1.9.1",
     "node-sass": "^4.9.3",
+    "node-sass-magic-importer": "^5.2.0",
     "nodemon": "^1.18.4",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "path": "^0.12.7",
     "postcss": "^7.0.2",
     "postcss-cssnext": "^3.1.0",
@@ -66,30 +88,21 @@
     "style-loader": "^0.23.0",
     "svg-url-loader": "^2.2.0",
     "sw-precache-webpack-plugin": "^0.11.4",
-    "ts-loader": "^3.3.1",
+    "ts-loader": "^5.1.0",
     "typescript": "3.0.3",
     "typings-for-css-modules-loader": "^1.7.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url": "^0.11.0",
     "url-loader": "1.1.1",
-    "vue": "2.5.17",
-    "vue-loader": "^13.7.3",
-    "vue-mixin-decorator": "^1.0.0",
-    "vue-property-decorator": "7.0.0",
-    "vue-router": "3.0.1",
+    "vue-loader": "^15.4.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "2.5.17",
-    "vue-ts-loader": "0.0.3",
-    "vue2-filters": "^0.3.0",
-    "vuelidate": "^0.7.4",
-    "vuex": "3.0.1",
-    "vuex-router-sync": "5.0.0",
-    "vuex-typex": "^3.0.1",
-    "webpack": "3.8.1",
+    "webpack": "4.18.1",
+    "webpack-cli": "^3.1.0",
     "webpack-dashboard": "^2.0.0",
-    "webpack-dev-middleware": "^2.0.5",
-    "webpack-dev-server": "^2.11.3",
-    "webpack-hot-middleware": "^2.22.3",
+    "webpack-dev-middleware": "^3.3.0",
+    "webpack-dev-server": "^3.1.8",
+    "webpack-hot-middleware": "^2.24.0",
     "webpack-merge": "^4.1.4"
   }
 }
